<?xml version="1.0" encoding="utf-8"?>
<!-- /*
 * Orbital Live Wallpaper
 *
 * Copyright (C) 2012 PuZZleDucK (PuZZleDucK@gmail.com)
 * 
 *	This program is free software; you can redistribute it and/or
 *	modify it under the terms of the GNU General Public License version
 *	3 as published by the Free Software Foundation.
 *
 * This live wallpaper was originally based on the target live wallpaper by PuZZleDucK
 *
 */ -->
<resources>

    <string name="main_text">Hello and thanks for using Orbital Live Wallpaper. Please rate and review my apps in the Play Store (or in your own Blog :D), You can support development in three ways: Firstly by purchacing the donate version on the Play Store. Secondly by helping me up my Dropbox capacity by using me as a reference ;). Third and finally you can support development directly by contribuiting code or commentary to the project on GitHub directly. This project is 100% open source and gpl. In any case thanks for supporting PuZZleDucK Industries by installing Orbital Live Wallpaper in the first place.</string>
    <string name="app_name">OrbitalLiveWallpaper</string>
    <string name="contactDevButtonString">Contact the Developer by email</string>
    <string name="appButtonString">1. View other PuZZleDucK Industries apps in the Play Store.</string>
    <string name="dropboxButtonString">2. Join dropbox and refer PuZZleDucK Industries.</string>
    <string name="githubButtonString">3. Checkout the code on GitHub.</string>
    <string name="settings_title">Orbital LWP Settings</string>
    <string name="orbit_settings_orbit_category_title">Orbits</string>
    <string name="orbit_settings_trans_title">Transitions</string>
    <string name="orbit_settings_color_title">Colors</string>
    <string name="orbit_settings_orbit_category_summary">Orbits</string>
    <string name="orbit_settings_trans_summary">Transitions</string>
    <string name="orbit_settings_color_summary">Colors</string>

</resources>